--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "screenfull": "^3.3.3",
     "vue": "2.5.17",
+    "vue-i18n": "^8.1.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
