--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "0.18.0",
     "element-ui": "2.4.6",
+    "fuse.js": "^3.2.1",
+    "hotkeys-js": "^3.3.8",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
