--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "element-ui": "2.4.6",
+    "flex.css": "^1.1.7",
     "fuse.js": "^3.2.1",
     "hotkeys-js": "^3.3.8",
     "js-cookie": "2.2.0",
