--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fuse.js": "^3.2.1",
     "hotkeys-js": "^3.3.8",
     "js-cookie": "2.2.0",
+    "mockjs": "^1.0.1-beta3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "screenfull": "^3.3.3",
